--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,12 +1,18 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+#root{
+  width: 100%;
+}
 .navbar {
- width: 1650px;
   margin: auto;
   padding: 20px;
   background-color: #3d1e19;
   color: white;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
@@ -19,7 +25,6 @@
   display: flex;
   gap: 25px;
 }
-
 .nav-links a {
   text-decoration: none;
   color: white;
